--- a/style/reset.css
+++ b/style/reset.css
@@ -23,8 +23,12 @@ article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
 	display: block;
 }
+html {
+	font-size: 16px;
+}
 body {
 	line-height: 1;
+	font-size: 1rem;
 }
 ol, ul {
 	list-style: none;
@@ -40,4 +44,8 @@ q:before, q:after {
 table {
 	border-collapse: collapse;
 	border-spacing: 0;
+}
+
+* {
+	box-sizing: border-box;
 }
