--- a/style/style.scss
+++ b/style/style.scss
@@ -61,4 +61,68 @@ body {
             }
         }
     }
+
+    .main {
+        display: flex;
+        flex-direction: column;
+
+        .additional {
+            background-image: url(../img/background.png);
+            background-size: cover;
+
+            .conteiner {
+                width: 81.26%;
+                margin: 38px auto;
+                display: flex;
+                flex-direction: row;
+
+                .additional__baner {
+                    .additional__picture {
+                        width: 70%;
+                    }
+                }
+
+                .additional__item {
+                    color: white;
+                    margin: 8% 0 0 25%;
+
+                    .additional__title {
+                        font-size: 1.5rem;
+                        letter-spacing: 0.02rem;
+                        line-height: 32px;
+                    }
+
+                    .additional__text {
+                        font-size: 1rem;
+                        letter-spacing: 0.02rem;
+                        line-height: 26px;
+                        margin-bottom: 12%;
+                    }
+
+                    .additional__buttom {
+                        background-color: #5094F2;
+                        display: flex;
+                        flex-direction: row;
+                        padding: 7px 4%;
+                        width: 66%;
+
+                        .buttom__picture {
+                            display: flex;
+                            align-items: center;
+                        }
+                        
+                        .buttom__link {
+                            color: white;
+                            text-decoration: none;
+                            font-size: 1.25rem;
+                            display: flex;
+                            align-items: center;
+                        }
+                    }
+                }
+            }
+        }
+
+        
+    }
 }
