--- a/style/style.css
+++ b/style/style.css
@@ -11,11 +11,15 @@ body .header .conteiner {
   width: 81.26%;
   margin: 1.3% auto;
   display: flex;
+  flex-direction: row;
   justify-content: space-between;
+  align-items: start;
 }
 body .header .conteiner .header__item {
   display: flex;
   flex-direction: row;
+  justify-content: stretch;
+  align-items: start;
 }
 body .header .conteiner .header__item .header__logo {
   background-color: #5094F2;
