--- a/style/_header.scss
+++ b/style/_header.scss
@@ -7,7 +7,7 @@ $colorFourth: #6F7173;
 
 .header {
     .conteiner {
-        @include addmarginconteiner(81.26%, 1.3%);
+        @include addmarginconteiner(81.26%, 0);
         @include flex(row, space-between);
 
         .header__item {
@@ -35,6 +35,7 @@ $colorFourth: #6F7173;
         }
 
         .header__item--nav {
+            width: 30%;
 
             .header__nav {
                 font-size: 0;
@@ -42,26 +43,34 @@ $colorFourth: #6F7173;
 
                 .nav__item,
                 .nav__item--active {
-                    @include getmargin(7.3%, 7.3%, 7.3%, 7.3%);
+                    // @include getmargin(7.3%, 7.3%, 7.3%, 7.3%);
+                    padding: 7.3%;
                     
                     .nav__link {
                         font-size: 1rem;
                         color: $colorSecond;
                         text-decoration: none;
+                        cursor: pointer;
                     }
                 }
 
                 .nav__item--active {
-                    border-bottom: 2px solid $colorFirst;
+                    border-bottom: 3px solid $colorFirst;
                 }
 
-                .nav__item:hover {
-                    border-bottom: 2px solid $colorFirst;
-                    cursor: pointer;
-                }
+                // .nav__item:hover .nav__item--active{
+                //     border-bottom: none;
+                // }
 
-                .nav__item:hover .nav__item--active {
-                    cursor: pointer;
+                .nav__item {
+
+                    &:hover {
+                        border-bottom: 3px solid $colorFirst;
+                        
+                        .nav__item--active {
+                            border-bottom: none;
+                        }
+                    }
                 }
             }
         }
